@@ -1,6 +1,0 @@
-%define _prefix   /opt/gnome
-%define _sharedir %{_prefix}/share
-%define boost_version 1.33.1
-%define boost_prefix   /usr
-%define _build_requires gtkmm24-devel, gconfmm-devel,  boost-devel = %{boost_version}, libsigc++2-devel
-%define _requires gtkmm2 >= 2.4, gconfmm >= 2.0,  libsigc++2,  boost = %{boost_version}
