@@ -1,63 +1,0 @@
-Name:		peless
-Summary:	Text browser
-Version:	%{_version}
-Release:	%{_release}%{?dist}
-License:	GPL
-Group:		Applications/Text
-Source0:	http:/prdownload.berlios.de/peless/%{name}-%{version}.tar.bz2
-BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
-Packager:	https://developer.berlios.de/projects/peless/
-URL:		http://www.io.com/~pelliott/pme/ 
-
-
-BuildRequires: %{_build_requires}
-
-
-Requires: %{_requires}
-
-%description
-Peless is a simple text file lister. It only displays files and 
-never modifies them. It can display multiple files using a tabbed notebook, 
-display international characters, and search the files for regular expressions 
-or literal expressions. Users can choose the fonts used to display files.
-
-%prep
-%setup -q
-
-%build
-CFLAGS="$RPM_OPT_FLAGS" CXXFLAGS="$RPM_OPT_FLAGS" \
-PKG_CONFIG_PATH=%{_prefix}/lib/pkgconfig:%{_prefix}/share/pkgconfig \
-	./configure --prefix=%{_prefix} --with-boost=%{boost_prefix} \
-	--with-dtcat=%{?DTCAT:%{DTCAT}}%{!?DTCAT:'Application;Utility;'}
-CCFLAGS=$RPM_OPT_FLAGS \
-PKG_CONFIG_PATH=%{_prefix}/lib/pkgconfig:%{_prefix}/share/pkgconfig \
-	 make %{?_smp_mflags}
-
-%install
-[ "$RPM_BUILD_ROOT" != "/" ] && rm -rf "$RPM_BUILD_ROOT"
-
-make DESTDIR=$RPM_BUILD_ROOT install-strip
-
-
-%clean
-[ "$RPM_BUILD_ROOT" != "/" ] && rm -rf "$RPM_BUILD_ROOT"
-rm -rf $RPM_BUILD_DIR/file.list.%{name}
-rm -rf $RPM_BUILD_DIR/file.list.%{name}.libs
-rm -rf $RPM_BUILD_DIR/file.list.%{name}.files
-rm -rf $RPM_BUILD_DIR/file.list.%{name}.files.tmp
-rm -rf $RPM_BUILD_DIR/file.list.%{name}.dirs
-
-%files
-%defattr(-, root, root)
-%doc AUTHORS COPYING ChangeLog NEWS README INTERNATIONALIZATION philo.txt
-%{_prefix}/bin/peless
-%{_datadir}/applications/%{name}.desktop
-%{_datadir}/pixmaps/%{name}.png
-%{_datadir}/pixmaps/%{name}.xpm
-%doc %_mandir/man1/peless.1.*
-
-%changelog
-* Sun May 27 2007 Paul Elliott <pelliott@io.com>
-- update to satisfy fedora rules.
-* Sun Jan 22 2005 D. Scott Barninger <barninger@fairfieldcomputers.com>
-- modify for gwdg.de repository
