@@ -1,2 +1,0 @@
-%define _version 1.145
-%define _release 0.070609
