@@ -34,6 +34,7 @@ namespace SearchTextView {  // avoid namespace conficts.
   // constuctor create a search dialog.
   SearchCenter::SearchCenter(Gtk::Window& parent): 
     dialog(
+	   // title of regular expression search dialog.
 		_("Regular Expression Search"),
 		parent,
 		true,
@@ -44,18 +45,26 @@ namespace SearchTextView {  // avoid namespace conficts.
     // these members were pointers to objects when code generated by glade.
     regex_vbox(false,0),
     top_hbox(false,0),
+    // title of regular expression search string text entry area.
     entry_frame(_("Regular Expression search string")),
     regex_entry(),
+    // type of search to do, types are literal, normal, basic, extended.
     type_frame(_( "Regular Expression type" )),
     checkbox_vbox(false,0),
     type_vbox(false,0),
     type_group(),
+    //radio button title type. indicates search for a literal string
     literal_radiobutton(type_group,_("literal")),
+    // radio button title type. Normal. normal regular expression search
     normal_radiobutton(type_group,_("normal")),
+    // radio button title type. basic. basic regular expression search
     basic_radiobutton(type_group,_("basic")),
+    // radio button title type. extended. extended regular expression search
     extended_radiobutton(type_group,_("extended")),
 
+    // title of require exact case match check button
     exact_checkbutton(_("require exact case match")),
+    // title of reverse search direction check button
     reverse_checkbutton(_("reverse search direction")),
 
     // initialize regular exprssion string.
@@ -69,6 +78,7 @@ namespace SearchTextView {  // avoid namespace conficts.
     imbue(std::locale::classic());
     #endif // BOOST_REGEX_USE_CPP_LOCALE
     // most of this shown by glade-2.
+    // 
     dialog.add_button(Gtk::StockID("gtk-cancel"), Gtk::RESPONSE_CANCEL );
     dialog.add_button(Gtk::StockID("gtk-ok"),   Gtk::RESPONSE_OK );
 
@@ -221,6 +231,8 @@ namespace SearchTextView {  // avoid namespace conficts.
 	      // if exception send message dialog.
 
 	      // setup error message.
+	      // error message happens when failure 
+	      // to compile a specfied regular expression occurs
 	      std::string msg=_("Error compiling regular exception:\n");
 	      msg += excpt.what();
 	      Gtk::MessageDialog msgdia(
@@ -362,6 +374,8 @@ namespace SearchTextView {  // avoid namespace conficts.
 	// user asks for it
 	if ( ! success && 
 	     (region_begin != buffer.begin() ) && 
+	     // regular expression search failed ask if should continue
+	     // search from beginning of buffer.
 	     display_message_YES( _(
 	      "Regular expresion search failed, continue search from "
               "beginning of buffer."
@@ -387,6 +401,9 @@ namespace SearchTextView {  // avoid namespace conficts.
 	// and user requests it...
 	if ( ! success && 
 	     (region_end != buffer.end() ) && 
+
+	     // regular expression search failed ask if should continue
+	     // search from end of buffer.
 	     display_message_YES( _(
 	      "Regular expresion search failed, continue search from "
               "end of buffer."
@@ -404,6 +421,7 @@ namespace SearchTextView {  // avoid namespace conficts.
     if ( ! success )
       {
 	display_message_OK(
+			   // indicate regular expression search failure.
 			   _("Regular expression search failure.")
                           );
       };
